--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -39,8 +39,6 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='#about') About
                         li.nav-item
-                            a.nav-link(href='#services') Services
-                        li.nav-item
                             a.nav-link(href='#portfolio') Portfolio
                         li.nav-item
                             a.nav-link(href='#contact') Contact
@@ -50,11 +48,11 @@ html(lang='en')
             .container.px-4.px-lg-5.h-100
                 .row.gx-4.gx-lg-5.h-100.align-items-center.justify-content-center.text-center
                     .col-lg-8.align-self-end
-                        h1.text-white.font-weight-bold Your Favorite Place for Free Bootstrap Themes
+                        h1.text-white.font-weight-bold Amelia Emergency Squad
                         hr.divider
                     .col-lg-8.align-self-baseline
                         p.text-white-75.mb-5
-                            | Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!
+                            | Serving Amelia County citizens since 1958
                         a.btn.btn-primary.btn-xl(href='#about') Find Out More
 
         // About
@@ -62,10 +60,10 @@ html(lang='en')
             .container.px-4.px-lg-5
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-lg-8.text-center
-                        h2.text-white.mt-0 We've got what you need!
+                        h2.text-white.mt-0 About
                         hr.divider.divider-light
                         p.text-white-75.mb-4
-                            | Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!
+                            | Amelia Emergency Squad Inc. is a non-profit Volunteer Organization that is contracted to the Amelia County 911 system. If you are having an emergency PLEASE CALL 911 IMMEDIATELY, it is possible for the building to be empty at any point in the day due to all crews being on calls. Calling 911 will get help to you in a more timely manner either through mutual aid with a surrounding county or if a crew can be made up of volunteers not on duty at that point in time.
                         a.btn.btn-light.btn-xl(href='#services') Get Started!
 
         // Services
@@ -77,35 +75,35 @@ html(lang='en')
                     .col-lg-3.col-md-6.text-center
                         .mt-5
                             .mb-2
-                                i.bi-gem.fs-1.text-primary
-                            h3.h4.mb-2 Sturdy Themes
-                            p.text-muted.mb-0 Our themes are updated regularly to keep them bug free!
+                                i.bi.bi-hand-thumbs-up-fill.fs-1.text-primary
+                            h3.h4.mb-2 Advanced Life Support
+                            p.text-muted.mb-0 All of our ambulances can provide advanced life support to ensure the highest level of prehospital care.
                     .col-lg-3.col-md-6.text-center
                         .mt-5
                             .mb-2
-                                i.bi-laptop.fs-1.text-primary
-                            h3.h4.mb-2 Up to Date
-                            p.text-muted.mb-0 All dependencies are kept current to keep things fresh.
+                                i.bi.bi-emoji-smile.fs-1.text-primary
+                            h3.h4.mb-2 County-Wide EMS
+                            p.text-muted.mb-0 Amelia Emergency Squad is the only 911 ambulance agency for the entire county.
                     .col-lg-3.col-md-6.text-center
                         .mt-5
                             .mb-2
                                 i.bi-globe.fs-1.text-primary
-                            h3.h4.mb-2 Ready to Publish
-                            p.text-muted.mb-0 You can use this design as is, or you can make changes!
+                            h3.h4.mb-2 Driven by Volunteers
+                            p.text-muted.mb-0 The executive board and many of the providers serve on a volunteer-basis
                     .col-lg-3.col-md-6.text-center
                         .mt-5
                             .mb-2
                                 i.bi-heart.fs-1.text-primary
-                            h3.h4.mb-2 Made with Love
-                            p.text-muted.mb-0 Is it really open source if it's not made with love?
+                            h3.h4.mb-2 1000+ 911 Calls Per Year
+                            p.text-muted.mb-0 In the year of 2020, AES responded to over 1,700 911 calls.
 
         // Portfolio
         #portfolio
             .container-fluid.p-0
                 .row.g-0
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/1.jpg', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/1.jpg', alt='...')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/AESlego.jpeg', title='Project Name')
+                            img.img-fluid(src='assets/img/portfolio/fullsize/AESlego.jpeg', alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
@@ -152,11 +150,11 @@ html(lang='en')
                                 .project-name
                                     | Project Name
 
-        // Call to action
-        section.page-section.bg-dark.text-white
-            .container.px-4.px-lg-5.text-center
-                h2.mb-4 Free Download at Start Bootstrap!
-                a.btn.btn-light.btn-xl(href='https://startbootstrap.com/theme/creative/') Download Now!
+        //- // Call to action
+        //- section.page-section.bg-dark.text-white
+        //-     .container.px-4.px-lg-5.text-center
+        //-         h2.mb-4 Free Download at Start Bootstrap!
+        //-         a.btn.btn-light.btn-xl(href='https://startbootstrap.com/theme/creative/') Download Now!
 
         // Contact
         section#contact.page-section
@@ -166,40 +164,54 @@ html(lang='en')
                         h2.mt-0 Let's Get In Touch!
                         hr.divider
                         p.text-muted.mb-5
-                            | Ready to start your next project with us? Send us a messages and we will get back to you as soon as possible!
+                            | Ready to learn more about becoming a hero in your hometown? Send us a messages and we will get back to you as soon as possible!
                 .row.gx-4.gx-lg-5.justify-content-center.mb-5
                     .col-lg-6
-                        form
-                            .form-floating.mb-3
-                                input#inputName.form-control(type='text', placeholder='Enter your name...')
-                                label(for='inputName') Full name
-                            .form-floating.mb-3
-                                input#inputEmail.form-control(type='email', placeholder='name@example.com')
-                                label(for='inputEmail') Email address
-                            .form-floating.mb-3
-                                input#inputPhone.form-control(type='tel', placeholder='(123) 456-7890')
-                                label(for='inputPhone') Phone number
-                            .form-floating.mb-3
-                                textarea#inputMessage.form-control(type='text', placeholder='Enter your message here...', style='height: 10rem;')
-                                label(for='inputMessage') Message
-                            .d-grid
-                                button.btn.btn-primary.btn-xl(type='submit') Submit
+
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-lg-4.text-center.mb-5.mb-lg-0
                         i.bi-phone.fs-2.mb-3.text-muted
-                        div +1 (555) 123-4567
+                        div (804) 561-3336
+                    .col-lg-4.text-center.mb-5.mb-lg-0
+                        a(href='https://www.facebook.com/ameliarescuesquad/')
+                            i.bi.bi-facebook.fs-2.mb-3.text-muted
+                        a(href='https://www.facebook.com/ameliarescuesquad/')
+                            div Squad Facebook
+                    .col-lg-4.text-center.mb-5.mb-lg-0
+                        i.bi.bi-envelope.fs-2.mb-3.text-muted
+                        div office@ameliarescue.org
 
         // Footer
         footer.bg-light.py-5
             .container.px-4.px-lg-5
                 .small.text-center.text-muted
-                    | Copyright &copy; 2021 - Company Name
+                    | Copyright &copy; 2021 - Amelia Emergency Squad Incorporated
 
         // Bootstrap core JS
-        script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/docs/js/bootstrap.bundle.min.js')
+        script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js')
 
         // SimpleLightbox plugin JS
         script(src='https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js')
 
         // Core theme JS
         script(src='js/scripts.js')
+
+        // Load Facebook SDK for JavaScript
+        // fb-root
+        script.
+            window.fbAsyncInit = function() {
+            FB.init({
+            xfbml            : true,
+            version          : 'v10.0'
+            });
+            };
+            (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+            fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+            // Your Chat Plugin code
+        .fb-customerchat(attribution='setup_tool' page_id='355203328327745')
+
