--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Creative - Start Bootstrap Theme
+        title Amelia Emergency Squad
 
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
@@ -102,53 +102,53 @@ html(lang='en')
             .container-fluid.p-0
                 .row.g-0
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/AESlego.jpeg', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/fullsize/AESlego.jpeg', alt='...')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/AESlegoman.jpg', title='Provider')
+                            img.img-fluid(src='assets/img/portfolio/fullsize/AESlegoman.jpg', alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
-                                    | Category
+                                    | Let’s get you EMT certified and you can be a PROVIDER 
                                 .project-name
-                                    | Project Name
+                                    | Are you the type to be in the middle of the action? While you’re working on your certification, we’ll keep you in the back of the truck as an observer as you begin your journey with us.
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/2.jpg', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/2.jpg', alt='...')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/AMELIA3.jpg', title='Driver')
+                            img.img-fluid(src='assets/img/portfolio/fullsize/AMELIA3.jpg', alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
-                                    | Category
+                                    | Become a driver with training that requires only one weekend
                                 .project-name
-                                    | Project Name
+                                    | Want to help in a quick and easy way? We’ll help you get your Emergency Vehicle Operators License ((FOR FREE)) and have you behind the wheel of our ambulance in no time.
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/3.jpg', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/3.jpg', alt='...')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/ameliaMAP1.jpg', title='Support Member')
+                            img.img-fluid(src='assets/img/portfolio/fullsize/ameliaMAP1.jpg', alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
-                                    | Category
+                                    | Become a SUPPORT MEMBER of AES
                                 .project-name
-                                    | Project Name
+                                    | Is the medical field not your thing, but you still have a passion to help the citizens of Amelia? We always need assistance with recruitment, building maintenance, IT and so much more. We’d love to have your help!
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/4.jpg', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/4.jpg', alt='...')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/jr.jpg', title='Junior Squad')
+                            img.img-fluid(src='assets/img/portfolio/fullsize/jr.jpg', alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
-                                    | Category
+                                    | The JUNIOR SQUAD was established in the late 1980s
                                 .project-name
-                                    | Project Name
+                                    | Today, we have many members between the ages of 16-18 years old that actively volunteer to serve this community with Amelia Emergency Squad. Contact Junior Advisor Marie Willet at (804)295-6087 for more information.
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/5.jpg', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/5.jpg', alt='...')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/exec.jpeg', title='Executive Board & Officers')
+                            img.img-fluid(src='assets/img/portfolio/fullsize/exec.jpeg', alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
-                                    | Category
+                                    | Become an OFFICER with the Amelia Emergency Squad! 
                                 .project-name
-                                    | Project Name
+                                    | Our leaders of the squad and handle the behind the scenes action. The current executive board consists of  President Jamare Dickerson, Operations Officer Melissa Watley, Treasurer Linda Kirkman, Secretary Marie Willet and Member at Large Selena Yanoska. Officer rolls include Rolling Equipment, Supplies, Training, Recruitment and Retention and more. 
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/6.jpg', title='Project Name')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/6.jpg', alt='...')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/aux1.jpg', title='Auxiliary Squad')
+                            img.img-fluid(src='assets/img/portfolio/fullsize/aux1.jpg', alt='...')
                             .portfolio-box-caption.p-3
                                 .project-category.text-white-50
-                                    | Category
+                                    | Another great way to give back - join our AUXILIARY SQUAD
                                 .project-name
-                                    | Project Name
+                                    | These awesome women and men support AES by fundraising at local events, providing concession assistance at the local VFW’s Friday night Bingo, and being a constant asset to us. The Auxiliary Squad has been serving the community for the past 50 years. Contact President Mary Alice Williams at (804)381-9510 for more information.
 
         //- // Call to action
         //- section.page-section.bg-dark.text-white
